# Bingo

./: CMakeLists.txt  README.md  conanfile.txt  configure
aws_service/: CMakeLists.txt
aws_service/resources/: histstat_item.json  jobinfo_template.json  ondemand_template.json
aws_service/src/: aws_service.cpp
bingo/: CMakeLists.txt  async_sock.hpp  async_stream.hpp  bingo.bck  bingo.hpp  bingosock.hpp  buffer.hpp  conanfile.py  errors.hpp  io_context.hpp  reactor.hpp  stream_processor.hpp
bingo/include/: async_stream.hpp  bingo.hpp  bingosock.hpp  buffer.hpp  errors.hpp  http_parser.hpp  http_server.hpp  http_utilities.hpp  io_context.hpp  reactor.hpp  request_handler.hpp  web_server.hpp
client/: CMakeLists.txt  bingoclient.cpp  bingoclient2.cpp
docker/: Dockerfile
docker_ubuntu/: Dockerfile
examples/: CMakeLists.txt  conanfile.txt
examples/aws_service/: CMakeLists.txt
examples/aws_service/resources/: ondemand_custom_data.json
examples/aws_service/src/: aws_service.cpp  base64.h
examples/client/: CMakeLists.txt  bingoclient.cpp  bingoclient2.cpp
examples/http_server/: CMakeLists.txt  http_server.cpp
examples/server/: CMakeLists.txt  bingoserver.cpp
examples/web_server/: CMakeLists.txt  web_server.cpp
http_server/: CMakeLists.txt  http_fields.hpp  http_header.hpp  http_message.hpp  http_message.ipp  http_parser.hpp  http_serializer.hpp  http_server.cpp  http_status.hpp
http_server/imp/: file_stdio.ipp  http_error.ipp  http_field.ipp  http_message.ipp  rfc7230.ipp  rfc7230_detail.hpp
http_server/include/: file_base.hpp  file_stdio.hpp  http_error.hpp  http_field.hpp  http_file_body.hpp  http_message.hpp  http_parser.hpp  http_serializer.hpp  http_verb.hpp  rfc7230.hpp
http_server/src/: http_server.cpp  request_handler.hpp
server/: CMakeLists.txt  bingoserver.cpp  bingoserver2.cpp
web_server/: CMakeLists.txt
web_server/include/: flat_map.hpp  http_serializer.hpp  http_server.hpp  http_target_parser.hpp  regex_range.hpp  web_server.hpp
web_server/src/: web_server.cpp
